gccida/g0/binary_op_error
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/binary_op_error/src/c-common.c:2041:24: error: must use 'enum' tag to refer to type 'tree_code'
void  binary_op_error( tree_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/binary_op_error/src/c-common.c:2066:57: error: use of undeclared identifier 'off_74A67D'
error( "invalid operands to binary %s", ( const char *)&off_74A67D); 
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/binary_op_error/src/c-common.c:2079:52: error: use of undeclared identifier 'off_74A69F'
error( "invalid operands to binary %s", ( _BYTE *)&off_74A69F + 2); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/binary_op_error/src/c-common.c:2085:57: error: use of undeclared identifier 'off_74A69F'
error( "invalid operands to binary %s", ( const char *)&off_74A69F); 
                                                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/binary_op_error/src/obj/c-common.o] Error 1
